--- a/Django/ShopMall/templates/myadmin/login.html
+++ b/Django/ShopMall/templates/myadmin/login.html
@@ -13,8 +13,7 @@
     <body>
         <div id="login-page" class="container">
             <h1>商城后台管理登录</h1>
-            <form id="login-form" method="post" class="well" action="{% url 'myadmin_dologin' %}">
-            {% csrf_token %}
+            <form id="login-form" method="post" class="well" action="{% url 'myadmin_dologin' %}">{% csrf_token %}
             账&nbsp;号：<input type="text" name="username" class="span2" placeholder="输入账号" /><br />
             密&nbsp;码：<input type="password" name="password" class="span2" placeholder="输入密码" /><br />
             验证码：<input type="text" name="code" class="span2" style="width:30px;"  />
@@ -23,7 +22,7 @@
             <label class="checkbox"> <input type="checkbox" /> 记住密码 </label>
             <button type="submit" class="btn btn-primary">登录</button>
             <button type="reset" class="btn">重置</button>
-        </form>    
+        </form>
         <br/>
         <span style="color:red">{{ info }}</span>
         </div>
